update paths & readme

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Snake</title>
-    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
     <div class="fields">
@@ -28,7 +28,7 @@
     </div>
     <div id="display"></div>
     <h2>Snake Game by Sergii Vasylyshyn (Personal Project, Pure JavaScript)</h2>
-    <script src="/js/index.js"></script>
+    <script src="js/index.js"></script>
     <script>
       startGame();
     </script>
