--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
       </div>
     </div>
     <div id="display"></div>
-    <h2>Snake Game by Sergii Vasylyshyn (Personal Project, Pure JavaScript)</h2>
+    <a target="_blank" href="https://github.com/sergii-vasylyshyn-v/Snake-Game"
+      >Github</a
+    >
     <script src="js/index.js"></script>
     <script>
       startGame();
