update readme & display

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div id="display"></div>
     <a target="_blank" href="https://github.com/sergii-vasylyshyn-v/Snake-Game"
-      >Github</a
+      >Github Project</a
     >
     <script src="js/index.js"></script>
     <script>
